2002-07-25  Wakaba <w@suika.fam.cx>

	* Tool.pm: New module.

2002-07-22  Wakaba <w@suika.fam.cx>

	* Util.pm: Some fix for new returned value style
	of Message::MIME::Charset.

2002-07-21  Wakaba <w@suika.fam.cx>

	* Entity.pm (import): New.

2002-07-20  Wakaba <w@suika.fam.cx>

	* Entity.pm (content_type): Guess media type: 
	text/x-message-rfc1153, text/x-pgp-cleatext-singed,
	application/pgp, text/x-message-pem.

2002-07-19  Wakaba <w@suika.fam.cx>

	* Entity.pm:
	- (guess_media_type): New option.
	- (content_type): Guess media type (text/x-message-rfc934) 
	if necessary.

2002-07-13  Wakaba <w@suika.fam.cx>

	* Util.pm:
	- (get_host_fqdn): New function.
	- (%OPTION): New hash.
	* Entity.pm (stringify): Pass 'format' option
	to the body (when stringify'ing it) with
	-parent_format option, instead of -format option.

2002-07-08  Wakaba <w@suika.fam.cx>

	* Entity.pm (parse): Typo fix.
	* Header.pm (hook_init_fill_options, hook_stringify_fill_fields):
	New options.

2002-07-07  Wakaba <w@suika.fam.cx>

	* Entity.pm (check_md5): New method.
	* Entity.pm (fill_md5, fill_md5_name, recalc_md5): New options.

2002-07-06  Wakaba <w@suika.fam.cx>

	* Header.pm: Support of RFC 2774 namespace.

2002-07-04  Wakaba <w@suika.fam.cx>

	* Util.pm (encode_printable_string, decode_printable_string,
	encode_t71_string, decode_t71_string, encode_restricted_rfc822,
	decode_restricted_rfc822): New functions.

2002-07-02  Wakaba <w@suika.fam.cx>

	* Util.pm (decide_newline): New function.
	* Entity.pm (parse): Call Message::Util::decide_newline
	instead of local code.

2002-06-23  Wakaba <w@suika.fam.cx>

	* Entity.pm (header_default_charset, header_default_charset_input):
	New options.
	* Header.pm (ditto): Likewise.
	* Util.pm
	- (angle_quoted, angle_qcontent, M_angle_quoted): New regexs
	(Moved from Message::Field::AngleQuoted).
	- (decode_ccontent): Order of arguments of 
	Message::MIME::EncodedWord::decode_ccontent is changed.
	- (unquote_if_angle_quoted): New function.
