@@ -1,3 +1,9 @@
+2002-07-26  Wakaba <w@suika.fam.cx>
+
+	* Entity.pm:
+	- (fill_missing_fields): New option.
+	- (fill_source, fill_destination): New options.
+
 2002-07-25  Wakaba <w@suika.fam.cx>
 
 	* Tool.pm: New module.
